--- a/renderer/index.html
+++ b/renderer/index.html
@@ -268,6 +268,12 @@
           <h3>Resources</h3>
           <div id="resList" class="resgrid"></div>
 
+          <h3>NPC Relationships</h3>
+          <div id="relList" class="resgrid"></div>
+          <p class="hint">
+            Levels are free-form; "Set Max" uses 50 for all known NPCs.
+          </p>
+
           <div class="actions">
             <button type="submit" class="primary">
               Save Changes (instant)
